--- a/Commentium.API/appsettings.json
+++ b/Commentium.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSqlLocalDB;Database=CommentiumDb;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
