added caching logic using Distributed Memory Cache

--- a/Commentium.Persistence/Commentium.Persistence.csproj
+++ b/Commentium.Persistence/Commentium.Persistence.csproj
@@ -13,9 +13,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Commentium.Application\Commentium.Application.csproj" />
     <ProjectReference Include="..\Commentium.Domain\Commentium.Domain.csproj" />
   </ItemGroup>
 
