added redis for caching data added expiration time for data in cache added docker compose project added yml file for creating docker images

--- a/Commentium.API/appsettings.json
+++ b/Commentium.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSqlLocalDB;Database=CommentiumDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=commentium.database,1433;Database=CommentiumDb;User Id=sa;Password=Password12345!;Trust Server Certificate=True",
+    "Redis": "commentium.cache:6379"
   },
   "AllowedHosts": "*"
 }
