added logic of checking text field using HtmlSanitizer added Dockerfile to client project added logic for client project to docker-compose.yml file

--- a/Commentium.API/appsettings.json
+++ b/Commentium.API/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=commentium.database,1433;Database=CommentiumDb;User Id=sa;Password=Password12345!;Trust Server Certificate=True",
+    "DefaultConnection": "Server=commentium.database,1433;Database=CommentiumDb;User Id=sa;Password=Password12345!;Trust Server Certificate=True;",
     "Redis": "commentium.cache:6379"
-  },
+  }, //CommandTimeout=180;
   "MessageBroker": {
     "Host": "amqp://commentium-queue:5672",
     "Username": "guest",
