cleaned up code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   commentium.api:
-    image: ${DOCKER_REGISTRY-}commentiumapi
+    image: commentiumapi
     container_name: commentium-api
     build:
       context: .
